edits for three column.

--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="column-one-third div1">
+      <div class="column-one-third">
         <div class="circle">
           <img src="images/merge.png" alt="merge">
         </div>
@@ -29,7 +29,7 @@
           stages of the product life cycle from
           Design Control to CAPA</p>
       </div>
-      <div class="column-one-third div1">
+      <div class="column-one-third">
         <div class="circle">
           <img src="images/cloud-computing.png" alt="cloud cloud-computing">
         </div>
@@ -38,7 +38,7 @@
           existing tools, such as JIRA, GitHub and
           Jenkins with Enzyme</p>
       </div>
-      <div class="column-one-third div1">
+      <div class="column-one-third">
         <div class="circle">
           <img src="images/discussion.png" alt="discussion">
         </div>
