--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -18,6 +18,58 @@
         network run 10x more efficiently and deliver an unparalleled quality of care.</p>
       </div>
     </div>
+    <div class="row">
+      <div class="column-half">
+        <div class="row flex-wrap">
+          <div class="column-one-fourth">
+            <img src="images/software.svg" alt="software">
+          </div>
+          <div class="column-three-fourth">
+            <h2>INTUITIVE, SMART SOFTWARE</h2>
+            <p>We build products that transform how
+            healthcare facilities run across Africa
+            - making them radically more efficient
+            operationally and financially, a complete
+            turnaround.</p>
+          </div>
+          <div class="column-one-fourth">
+            <img src="images/circumstance.svg" alt="practice">
+          </div>
+          <div class="column-three-fourth">
+            <h2>FOR ANY CIRCUMSTANCE</h2>
+            <p>Our intuitive system is built around the
+            peculiarities of your facility; we support
+            offline deployments, sync to the cloud
+            and run on any device 24/7.</p>
+          </div>
+        </div>
+      </div>
+      <div class="column-half">
+        <div class="row flex-wrap">
+          <div class="column-one-fourth">
+            <img src="images/practice.svg" alt="software">
+          </div>
+          <div class="column-three-fourth">
+            <h2>PRACTICE MEDICINE, NOT ADMINISTRATION</h2>
+            <p>Our all-in-one electronic health records
+            (EHR), hospital management (HMIS) &amp;
+            billing system helps streamline your
+            facility, red uce waste and improve
+            quality of care.</p>
+          </div>
+          <div class="column-one-fourth">
+            <img src="images/data.svg" alt="data">
+          </div>
+          <div class="column-three-fourth">
+            <h2>DATA THAT TRANSFORMS</h2>
+            <p>We understand your facility better than
+            you do; we provide visually-appealing
+            eal-time analytics, reports and trends
+            at your finger tips.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
