adjusted three column exercise.

--- a/css-three-column-layout/index.html
+++ b/css-three-column-layout/index.html
@@ -25,7 +25,7 @@
           <img src="images/merge.png" alt="merge">
         </div>
         <h3 class="h3padding">Streamlined QMS</h3>
-        <p class="fontweight">A QMS that includes modules for all
+        <p class="fontweight padding-left-right">A QMS that includes modules for all
           stages of the product life cycle from
           Design Control to CAPA</p>
       </div>
@@ -34,7 +34,7 @@
           <img src="images/cloud-computing.png" alt="cloud cloud-computing">
         </div>
         <h3 class="h3padding">Integrates with exisitng tools</h3>
-        <p class="fontweight">Enzyme QMS integrates with your
+        <p class="fontweight padding-left-right">Enzyme QMS integrates with your
           existing tools, such as JIRA, GitHub and
           Jenkins with Enzyme</p>
       </div>
@@ -43,7 +43,7 @@
           <img src="images/discussion.png" alt="discussion">
         </div>
         <h3 class="h3padding">In-depth Onboarding</h3>
-        <p class="fontweight">We train your entire team and provide
+        <p class="fontweight padding-left-right">We train your entire team and provide
           you with support when and as it's needed</p>
       </div>
     </div>
