--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -8,25 +8,30 @@
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Latin&family=Karla:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Latin&family=Karla:wght@200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Latin&family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="column-full">
-        <h1>SCALE, SPEED, AGILITY</h1>
-        <p>We've dedicated thousands of man hours to making healthcare institutions in the Helium
+      <div class="column-full padding50">
+        <h1 class="fontkarla700 text-center">SCALE, SPEED, AGILITY</h1>
+        <p class="text-center fontkarla300 padding50 fontweight100 margin-bottom50">We've dedicated thousands of man hours to making healthcare institutions in the Helium
         network run 10x more efficiently and deliver an unparalleled quality of care.</p>
       </div>
     </div>
     <div class="row">
-      <div class="column-half">
+      <div class="column-half padding50">
         <div class="row flex-wrap">
           <div class="column-one-fourth">
             <img src="images/software.svg" alt="software">
           </div>
           <div class="column-three-fourth">
-            <h2>INTUITIVE, SMART SOFTWARE</h2>
-            <p>We build products that transform how
+            <h2 class="fontkarla400">INTUITIVE, &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; SMART SOFTWARE</h2>
+            <p class="fontkarla300 fontweight100">We build products that transform how
             healthcare facilities run across Africa
             - making them radically more efficient
             operationally and financially, a complete
@@ -36,22 +41,22 @@
             <img src="images/circumstance.svg" alt="practice">
           </div>
           <div class="column-three-fourth">
-            <h2>FOR ANY CIRCUMSTANCE</h2>
-            <p>Our intuitive system is built around the
+            <h2 class="fontkarla400">FOR ANY CIRCUMSTANCE</h2>
+            <p class="fontkarla300 fontweight100">Our intuitive system is built around the
             peculiarities of your facility; we support
             offline deployments, sync to the cloud
             and run on any device 24/7.</p>
           </div>
         </div>
       </div>
-      <div class="column-half">
+      <div class="column-half padding50">
         <div class="row flex-wrap">
           <div class="column-one-fourth">
             <img src="images/practice.svg" alt="software">
           </div>
           <div class="column-three-fourth">
-            <h2>PRACTICE MEDICINE, NOT ADMINISTRATION</h2>
-            <p>Our all-in-one electronic health records
+            <h2 class="fontkarla400">PRACTICE MEDICINE, NOT ADMINISTRATION</h2>
+            <p class="fontkarla300 fontweight100">Our all-in-one electronic health records
             (EHR), hospital management (HMIS) &amp;
             billing system helps streamline your
             facility, red uce waste and improve
@@ -61,13 +66,18 @@
             <img src="images/data.svg" alt="data">
           </div>
           <div class="column-three-fourth">
-            <h2>DATA THAT TRANSFORMS</h2>
-            <p>We understand your facility better than
+            <h2 class="fontkarla400">DATA THAT TRANSFORMS</h2>
+            <p class="fontkarla300 fontweight100">We understand your facility better than
             you do; we provide visually-appealing
             eal-time analytics, reports and trends
             at your finger tips.</p>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column-full text-center margin-top25">
+        <button type="button">LEARN MORE</button>
       </div>
     </div>
   </div>
