--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -23,9 +23,9 @@
         network run 10x more efficiently and deliver an unparalleled quality of care.</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row flex-wrap">
       <div class="column-half padding50">
-        <div class="row flex-wrap">
+        <div class="row">
           <div class="column-one-fourth">
             <img src="images/software.svg" alt="software">
           </div>
@@ -37,6 +37,10 @@
             operationally and financially, a complete
             turnaround.</p>
           </div>
+        </div>
+      </div>
+      <div class="column-half padding50">
+        <div class="row">
           <div class="column-one-fourth">
             <img src="images/circumstance.svg" alt="practice">
           </div>
@@ -50,7 +54,7 @@
         </div>
       </div>
       <div class="column-half padding50">
-        <div class="row flex-wrap">
+        <div class="row">
           <div class="column-one-fourth">
             <img src="images/practice.svg" alt="software">
           </div>
@@ -62,6 +66,10 @@
             facility, red uce waste and improve
             quality of care.</p>
           </div>
+        </div>
+      </div>
+      <div class="column-half padding50">
+        <div class="row">
           <div class="column-one-fourth">
             <img src="images/data.svg" alt="data">
           </div>
