css-canvas-medical in progress.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -11,16 +11,45 @@
 </head>
 <body>
   <div class="container">
-    <div class="row padding50">
+    <div class="row padding50 flex-end justify-between">
       <div class="column-half display-flex">
         <img class="imgsize100" src="images/logo-blue.svg" alt="logo">
       </div>
-      <div class="column-half display-flex justify-evenly">
-        <a class="anchor-decoration text-lightgray" href="Product">Product</a>
-        <a class="anchor-decoration text-lightgray" href="Implementation">Implementation</a>
-        <a class="anchor-decoration text-lightgray" href="AboutUs">About Us</a>
-        <a class="anchor-decoration text-lightgray" href="Blog">Blog</a>
-        <button class="buttonblue" type="button">Contact Us</button>
+      <div class="column-half display-flex justify-evenly align-center">
+        <a class="anchor-decoration text-lightgray avenirfont12" href="Product">Product</a>
+        <a class="anchor-decoration text-lightgray avenirfont12" href="Implementation">Implementation</a>
+        <a class="anchor-decoration text-lightgray avenirfont12" href="AboutUs">About Us</a>
+        <a class="anchor-decoration text-lightgray avenirfont12" href="Blog">Blog</a>
+        <a href="ContactUs" class="anchor-decoration avenirfont12 buttonblue">Contact Us</a>
+      </div>
+    </div>
+    <hr>
+    <div class="row text-center background-grey justify-between">
+      <div class="column-full">
+        <h2 class="fontsize12">Clinicians Prefer Canvas</h2>
+        <p class="avenirfont10 paddingleft50 paddingright50">Physician-owned primary care practices across the country have
+        already made Canvas the fabric of their care.</p>
+      </div>
+    </div>
+    <div class="row background-grey avenirfont12">
+      <div class="column-half paddingleft50">
+        <p class="text-center ">Cascade Family Practice, Portland OR</p>
+        <p class="text-center">Temescal Creek Medicine, Oakland CA</p>
+        <p class="text-center">San Juan Healthcare, Friday Harbor WA</p>
+      </div>
+      <div class="column-half paddingright50">
+        <p class="text-center">Ward Mediccal Clinic, Bonifay FL</p>
+        <p class="text-center">Caribou Medical, Towanda PA</p>
+        <p class="text-center">Bay Tree Family Care, Red Bay AL</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column-half">
+        <h2 class="fontsize12 paddingleft50">Ready to learn More?</h2>
+        <p class="avenirfont10 paddingleft50"> Schedule a private meeting now</p>
+      </div>
+      <div class="column-half text-align-right paddingright50 paddingtop25">
+        <button class="largebluebutton" type="button">Get Started</button>
       </div>
     </div>
   </div>
