--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -24,23 +24,42 @@
       </div>
     </div>
     <hr>
-    <div class="row text-center background-grey justify-between">
+    <div class="row white-border">
       <div class="column-full">
-        <h2 class="fontsize12">Clinicians Prefer Canvas</h2>
-        <p class="avenirfont10 paddingleft50 paddingright50">Physician-owned primary care practices across the country have
+        <div class="heroimg">
+          <div class="overlay"></div>
+          <div class="absolutecontainer">
+            <h1 class="infographicheader tiemposfont300">The EMR Reimagined for Primary Care</h1>
+            <p class="infographic avenirfont12 color-lightwhite">Can't remember the last time you talked with a patient without focusing
+            on the EMR? Canvas lets you rediscover joy in the work you do. Capture
+            meaningful data, identify gaps in care, and move seamlessly between
+            tasks within the platform. You stay present with patients while your
+            whole care team stays up-to-speed. Be a better doctor with Canvas,
+            designed for primary care providers with the help of primary care
+            providers.</p>
+            <a class="anchor-decoration absolutelargebluebutton avenirfont12" href="GetStarted">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center background-yellow paddingtop25">
+      <div class="column-full">
+        <h2 class="fontsize12 text-darkgray">Clinicians Prefer Canvas</h2>
+        <p class="avenirfont10 paddingleft50 paddingright50 text-lightgray">Physician-owned primary care practices across the country</p>
+        <p class="avenirfont10 paddingleft50 paddingright50 text-lightgray negmargin5">have
         already made Canvas the fabric of their care.</p>
       </div>
     </div>
-    <div class="row background-grey avenirfont12">
+    <div class="row background-yellow avenirfont12 paddingtop25 bottom-border paddingbot25">
       <div class="column-half paddingleft50">
-        <p class="text-center ">Cascade Family Practice, Portland OR</p>
-        <p class="text-center">Temescal Creek Medicine, Oakland CA</p>
-        <p class="text-center">San Juan Healthcare, Friday Harbor WA</p>
+        <p class="text-center text-lightgray">Cascade Family Practice, Portland OR</p>
+        <p class="text-center text-lightgray">Temescal Creek Medicine, Oakland CA</p>
+        <p class="text-center text-lightgray">San Juan Healthcare, Friday Harbor WA</p>
       </div>
       <div class="column-half paddingright50">
-        <p class="text-center">Ward Mediccal Clinic, Bonifay FL</p>
-        <p class="text-center">Caribou Medical, Towanda PA</p>
-        <p class="text-center">Bay Tree Family Care, Red Bay AL</p>
+        <p class="text-center text-lightgray">Ward Mediccal Clinic, Bonifay FL</p>
+        <p class="text-center text-lightgray">Caribou Medical, Towanda PA</p>
+        <p class="text-center text-lightgray">Bay Tree Family Care, Red Bay AL</p>
       </div>
     </div>
     <div class="row">
@@ -50,6 +69,35 @@
       </div>
       <div class="column-half text-align-right paddingright50 paddingtop25">
         <button class="largebluebutton" type="button">Get Started</button>
+      </div>
+    </div>
+    <div class="row background-gray">
+      <div class="column-half text-white avenirfont10 paddingall40">
+        <img class="imgsize100" src="images/logo-white.png" alt="whitelogo">
+        <p class="margin2 paddingtop25">2307 Irvine Street, Suite 228</p>
+        <p class="margin2">San Franscisco, CA 94122</p>
+        <p class="margin2">(800)370-1416</p>
+        <p class="margin2">info@canvasmedical.com</p>
+      </div>
+      <div class="column-fourth text-white paddingall25">
+        <p class="avenirfont12">COMPANY</p>
+        <p class="avenirfont12">About Us</p>
+        <p class="avenirfont12">Blog</p>
+      </div>
+      <div class="column-fourth text-white paddingall25">
+        <p class="avenirfont12">PRODUCT</p>
+        <p class="avenirfont12">Product</p>
+        <p class="avenirfont12">Implementation</p>
+        <p class="avenirfont12">For Health Plans</p>
+        <p class="avenirfont12">Security</p>
+      </div>
+    </div>
+    <div class="row background-yellow paddingall25">
+      <div class="column-full">
+        <footer>
+          <a href="Privacy&ampTerms" class="avenirfont12 anchor-decoration text-lightgray marginright25 marginleft25">Privacy &amp; Terms</a>
+          <a href="Contact" class="avenirfont12 anchor-decoration text-lightgray">Contact Us</a>
+        </footer>
       </div>
     </div>
   </div>
