canvas medical in progress.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -30,7 +30,7 @@
           <div class="overlay"></div>
           <div class="absolutecontainer">
             <h1 class="infographicheader tiemposfont300">The EMR Reimagined for Primary Care</h1>
-            <p class="infographic avenirfont12 color-lightwhite">Can't remember the last time you talked with a patient without focusing
+            <p class="infographic avenirfont10 color-lightwhite">Can't remember the last time you talked with a patient without focusing
             on the EMR? Canvas lets you rediscover joy in the work you do. Capture
             meaningful data, identify gaps in care, and move seamlessly between
             tasks within the platform. You stay present with patients while your
@@ -46,7 +46,7 @@
       <div class="column-full">
         <h2 class="fontsize12 text-darkgray">Clinicians Prefer Canvas</h2>
         <p class="avenirfont10 paddingleft50 paddingright50 text-lightgray">Physician-owned primary care practices across the country</p>
-        <p class="avenirfont10 paddingleft50 paddingright50 text-lightgray negmargin5">have
+        <p class="avenirfont10 paddingleft50 paddingright50 paddingbot25 text-lightgray negmargin5">have
         already made Canvas the fabric of their care.</p>
       </div>
     </div>
@@ -64,14 +64,14 @@
     </div>
     <div class="row">
       <div class="column-half">
-        <h2 class="fontsize12 paddingleft50">Ready to learn More?</h2>
-        <p class="avenirfont10 paddingleft50"> Schedule a private meeting now</p>
+        <h2 class="fontsize12 paddingleft50 text-darkgray">Ready to learn more?</h2>
+        <p class="avenirfont10 paddingleft50 text-darkgray marginbottom20"> Schedule a private meeting now</p>
       </div>
       <div class="column-half text-align-right paddingright50 paddingtop25">
         <button class="largebluebutton" type="button">Get Started</button>
       </div>
     </div>
-    <div class="row background-gray">
+    <div class="row background-gray rowheight300 padding50">
       <div class="column-half text-white avenirfont10 paddingall40">
         <img class="imgsize100" src="images/logo-white.png" alt="whitelogo">
         <p class="margin2 paddingtop25">2307 Irvine Street, Suite 228</p>
