Completed css-canvas-medical challenge.

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="container">
     <div class="row padding50 flex-end justify-between">
-      <div class="column-half display-flex">
+      <div class="column-half display-flex paddingleft40">
         <img class="imgsize100" src="images/logo-blue.svg" alt="logo">
       </div>
-      <div class="column-half display-flex justify-evenly align-center">
+      <div class="column-half display-flex justify-between align-center paddingright40">
         <a class="anchor-decoration text-lightgray avenirfont12" href="Product">Product</a>
         <a class="anchor-decoration text-lightgray avenirfont12" href="Implementation">Implementation</a>
         <a class="anchor-decoration text-lightgray avenirfont12" href="AboutUs">About Us</a>
@@ -45,29 +45,29 @@
     <div class="row text-center background-yellow paddingtop25">
       <div class="column-full">
         <h2 class="fontsize12 text-darkgray">Clinicians Prefer Canvas</h2>
-        <p class="avenirfont10 paddingleft50 paddingright50 text-lightgray">Physician-owned primary care practices across the country</p>
-        <p class="avenirfont10 paddingleft50 paddingright50 paddingbot25 text-lightgray negmargin5">have
+        <p class="avenirfont10 paddingleft50 paddingright50 text-darkgray">Physician-owned primary care practices across the country</p>
+        <p class="avenirfont10 paddingleft50 paddingright50 paddingbot25 text-darkgray negmargin5">have
         already made Canvas the fabric of their care.</p>
       </div>
     </div>
     <div class="row background-yellow avenirfont12 paddingtop25 bottom-border paddingbot25">
       <div class="column-half paddingleft50">
-        <p class="text-center text-lightgray">Cascade Family Practice, Portland OR</p>
-        <p class="text-center text-lightgray">Temescal Creek Medicine, Oakland CA</p>
-        <p class="text-center text-lightgray">San Juan Healthcare, Friday Harbor WA</p>
+        <p class="text-center text-darkgray">Cascade Family Practice, Portland OR</p>
+        <p class="text-center text-darkgray">Temescal Creek Medicine, Oakland CA</p>
+        <p class="text-center text-darkgray">San Juan Healthcare, Friday Harbor WA</p>
       </div>
       <div class="column-half paddingright50">
-        <p class="text-center text-lightgray">Ward Mediccal Clinic, Bonifay FL</p>
-        <p class="text-center text-lightgray">Caribou Medical, Towanda PA</p>
-        <p class="text-center text-lightgray">Bay Tree Family Care, Red Bay AL</p>
+        <p class="text-center text-darkgray">Ward Mediccal Clinic, Bonifay FL</p>
+        <p class="text-center text-darkgray">Caribou Medical, Towanda PA</p>
+        <p class="text-center text-darkgray">Bay Tree Family Care, Red Bay AL</p>
       </div>
     </div>
     <div class="row">
       <div class="column-half">
-        <h2 class="fontsize12 paddingleft50 text-darkgray">Ready to learn more?</h2>
-        <p class="avenirfont10 paddingleft50 text-darkgray marginbottom20"> Schedule a private meeting now</p>
+        <h2 class="fontsize12 paddingleft40 text-darkgray">Ready to learn more?</h2>
+        <p class="avenirfont10 paddingleft40 text-darkgray marginbottom20"> Schedule a private meeting now</p>
       </div>
-      <div class="column-half text-align-right paddingright50 paddingtop25">
+      <div class="column-half text-align-right paddingright40 paddingtop25">
         <button class="largebluebutton" type="button">Get Started</button>
       </div>
     </div>
@@ -84,7 +84,7 @@
         <p class="avenirfont12">About Us</p>
         <p class="avenirfont12">Blog</p>
       </div>
-      <div class="column-fourth text-white paddingall25">
+      <div class="column-fourth text-white paddingall25 marginright25">
         <p class="avenirfont12">PRODUCT</p>
         <p class="avenirfont12">Product</p>
         <p class="avenirfont12">Implementation</p>
@@ -92,11 +92,11 @@
         <p class="avenirfont12">Security</p>
       </div>
     </div>
-    <div class="row background-yellow paddingall25">
+    <div class="row background-yellow paddingleft40 paddingbot25 paddingtop25">
       <div class="column-full">
         <footer>
-          <a href="Privacy&ampTerms" class="avenirfont12 anchor-decoration text-lightgray marginright25 marginleft25">Privacy &amp; Terms</a>
-          <a href="Contact" class="avenirfont12 anchor-decoration text-lightgray">Contact Us</a>
+          <a href="Privacy&ampTerms" class="avenirfont12 anchor-decoration text-darkgray marginright25">Privacy &amp; Terms</a>
+          <a href="Contact" class="avenirfont12 anchor-decoration text-darkgray">Contact Us</a>
         </footer>
       </div>
     </div>
