--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -10,41 +10,42 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="column-full">
         <div class="row justify-center">
-          <h1 class="fontsize18 fontweight700">New Arrivals</h1>
+          <h1 class="fontsize18 fontweight500">New Arrivals</h1>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="column-fifth fontsize12">
+      <div class="column-fifth fontsize10 paddingleftright10">
         <img class="img" src="images/dress1.jpeg" alt="dress">
-        <h4>Free people <span class="text-gray">| Size 6</span></h4>
-        <h4><ins>$35</ins>&nbsp;<del class="text-gray">$125 retail</del></h4>
+        <p>Free people <span class="text-gray">| Size 6</span></p>
+        <p><ins class="border-radius">$35 </ins>&nbsp;<del class="text-gray">$125 retail</del></p>
       </div>
-      <div class="column-fifth fontsize12">
+      <div class="column-fifth fontsize10 paddingleftright10">
         <img class="img" src="images/ysl-bag.jpeg" alt="purse">
-        <h4>Yves Saint Laurent <span class="text-gray">| One-Size</span></h4>
-        <h4><ins>$200</ins>&nbsp;<del class="text-gray">$1600 retail</del></h4>
+        <p>Yves Saint Laurent <span class="text-gray">| One-Size</span></p>
+        <p><ins class="border-radius">$200 </ins>&nbsp;<del class="text-gray">$1600 retail</del></p>
       </div>
-      <div class="column-fifth fontsize12">
+      <div class="column-fifth fontsize10 paddingleftright10">
         <img src="images/key.jpeg" alt="key">
-        <h4>Tiffany <span class="text-gray">| One-Size</span></h4>
-        <h4><ins>$400</ins>&nbsp;<del class="text-gray">$2000 retail</del></h4>
+        <p>Tiffany <span class="text-gray">| One-Size</span></p>
+        <p><ins class="border-radius">$400 </ins>&nbsp;<del class="text-gray">$2000 retail</del></p>
       </div>
-      <div class="column-fifth fontsize12">
+      <div class="column-fifth fontsize10 paddingleftright10">
         <img src="images/lv-bag.jpg" alt="wallet">
-        <h4>Louis Vuitton <span class="text-gray">| One-Size</span></h4>
-        <h4><ins>$95</ins>&nbsp;<del class="text-gray">$900 retail</del></h4>
+        <p>Louis Vuitton <span class="text-gray">| One-Size</span></p>
+        <p><ins class="border-radius">$95 </ins>&nbsp;<del class="text-gray">$900 retail</del></p>
       </div>
-      <div class="column-fifth fontsize12">
+      <div class="column-fifth fontsize10 paddingleftright10">
         <img src="images/dress2.jpeg" alt="dress2">
-        <h4>Reformation <span class="text-gray">| Size 4</span></h4>
-        <h4><ins>20$</ins>&nbsp;<del class="text-gray">$120 retail</del></h4>
+        <p>Reformation <span class="text-gray">| Size 4</span></p>
+        <p><ins class="border-radius">$20 </ins>&nbsp;<del class="text-gray">$120 retail</del></p>
       </div>
     </div>
   </div>
