Completed Javascript exercise.

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -14,7 +14,7 @@
         <button class="button1">Open Modal</button>
       </div>
     </div>
-    <div class="row display-content">
+    <div class="row display-none">
       <div class="column-full height">
         <div class="row align-center justify-center">
           <div class="fixed box display-flex align-center"></div>
