adjusted camelCase and added div

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -17,9 +17,11 @@
     <div class="row display-none">
       <div class="column-full height">
         <div class="row align-center justify-center">
-          <div class="fixed box display-flex align-center"></div>
-          <h2 class="fontsize12 textheader fixed">Would you like to take a survey?</h2>
-          <button class="button2 fixed">NO</button>
+          <div class="fixed display-flex align-center"></div>
+          <div class="fixed box display-flex align-center justify-center flex-direction-column">
+            <h2 class="fontsize12 textheader">Would you like to take a survey?</h2>
+            <button class="button2">NO</button>
+          </div>
         </div>
       </div>
     </div>
