took out function

--- a/es6-destructuring 3/index.html
+++ b/es6-destructuring 3/index.html
@@ -51,10 +51,7 @@
       }
     ];
 
-    function getBooks() {
-      return [library[0], library[1], library[2]];
-    }
-    const [book3, book4, book5] = getBooks();
+    const [book3, book4, book5] = library;
     console.log(book3);
     console.log(book4);
     console.log(book5);
