--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="box">
-      <div class="row">
+      <div class="row ">
         <div class="column-fifth display-flex align-center justify-center">
           <i class="fa-solid fa-chevron-left chevron left"></i>
         </div>
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="column-half margin-auto">
-          <div class="row justify-center space-evenly margin-bot-small circle-row">
+          <div class="row justify-center space-evenly margin-bot-small margin-top-small circle-row">
             <i class="fa-solid fa-circle circle" id="0"></i>
             <i class="fa-regular fa-circle circle" id="1"></i>
             <i class="fa-regular fa-circle circle" id="2"></i>
